# crispy-tribble2

./: README.md
F1Forecast/: README.md  ai_predictions.py  app.py  f1_data.py  models.py  pyproject.toml  requirements.txt  routes.py
F1Forecast/static/css/: style.css
F1Forecast/static/js/: animations.js  charts.js  main.js  track-layouts.js
F1Forecast/templates/: analytics.html  base.html  index.html  settings.html
